Fixed memory word size, reg7 overwriting

--- a/CPU/db/CPU.lpc.html
+++ b/CPU/db/CPU.lpc.html
@@ -208,47 +208,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >path_of_data|leftshift</TD>
+<TD >path_of_data|leftshift1</TD>
 <TD >16</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >16</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >path_of_data|dec1to2</TD>
 <TD >1</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >3</TD>
-<TD >2</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >path_of_data|dec2to4</TD>
-<TD >2</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >6</TD>
-<TD >4</TD>
-<TD >6</TD>
-<TD >6</TD>
-<TD >6</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >16</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -256,15 +224,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >path_of_data|dec3to8</TD>
-<TD >3</TD>
-<TD >11</TD>
-<TD >0</TD>
-<TD >11</TD>
+<TD >path_of_data|leftshift8</TD>
+<TD >16</TD>
 <TD >8</TD>
-<TD >11</TD>
-<TD >11</TD>
-<TD >11</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >16</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -288,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >path_of_data|reg16_t4</TD>
+<TD >path_of_data|reg16_pc</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -304,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >path_of_data|reg16_t3</TD>
+<TD >path_of_data|reg16_c</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -320,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >path_of_data|reg16_t2</TD>
+<TD >path_of_data|reg16_b</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -336,7 +304,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >path_of_data|reg16_t1</TD>
+<TD >path_of_data|reg16_a</TD>
+<TD >18</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >path_of_data|reg16_ir</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
